Add atvenu experience to portfolio

--- a/index.html
+++ b/index.html
@@ -283,6 +283,21 @@
           <div class="col-header">Work Experience</div>
           <ul>
             <li class="col-card">
+              <div class="card-title">Software Developer</div>
+              <div class="card-content">
+                <div class="card-right">
+                  <div class="card-description">
+                    <strong>(2018-present) </strong>Working on the leading
+                    live events commerce platform. Full stack development using 
+                    Javascript, React, React Native, Ruby, Ruby on Rails,
+                    PostgreSQL and CouchDB. Collaborating with multiple 
+                    developers on an agile team.
+                  </div>
+                </div>
+              </div>
+            </li>
+          <ul>
+            <li class="col-card">
               <div class="card-title">Reservoir Engineer</div>
               <div class="card-content">
                 <div class="card-right">
